week2 exerceise 1 and 2 done

--- a/weeks/week-2/exercises/exercise-1/index.html
+++ b/weeks/week-2/exercises/exercise-1/index.html
@@ -4,6 +4,8 @@
     <title>Theme Switcher Exercise</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <!-- <link rel="icon" href="path/to/your/favicon.ico"> -->
+
   </head>
 
   <body>
@@ -54,6 +56,11 @@
       makeover and showing off your knack for using advanced CSS tricks and
       making the DOM dance a little.
     </p>
-    <script src="./index.js" type="module"></script>
+
+     <script src="./index.js" type="module"></script>
+     <!-- <script>
+
+      
+      </script> -->
   </body>
 </html>
